Finished user unit tests

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -7,7 +7,7 @@ body {
 
 #whole_page {
   width: 47em;
-  margin: auto;
+  margin: 2em auto;
   padding: 0;
   text-align: left;
   border-width:  0 1px 1px 1px;
