--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -9,9 +9,9 @@
 <div id="whole_page">
 	<div id="header">RailsSpace</div>
 	<div id="nav">
-		<%= nav_link "Home", 'site' %> |
-		<%= nav_link "About Us", 'site', 'about' %> |
-		<%= nav_link "Help", 'site', 'help' %> |
+		<%= nav_link 'Home', 'site' %> |
+		<%= nav_link 'About Us', 'site', 'about' %> |
+		<%= nav_link 'Help', 'site', 'help' %> |
 		<%= nav_link 'Register', 'user', 'register' %>
 	</div>
 	<div id="content">
