Finished testing navigation for logged in users and guests. Left off on page #150 - Protecting pages

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -11,8 +11,13 @@
 	<div id="header">RailsSpace</div>
 	<div id="nav">
 		<span style="float: right;">
-			<%= nav_link 'Register', 'user', 'register' %> |
-			<%= nav_link 'Login', 'user', 'login' %>
+			<% if session[:user_id] -%>
+				<%= nav_link 'Hub', 'user', 'index' %> |
+				<%= nav_link 'Logout', 'user', 'logout' %>
+			<% else -%>
+				<%= nav_link 'Register', 'user', 'register' %> |
+				<%= nav_link 'Login', 'user', 'login' %>
+			<% end -%>
 		</span>
 		<%= nav_link 'Home', 'site' %> |
 		<%= nav_link 'About Us', 'site', 'about' %> |
