Finished adding other debugging objects and added custom redirect if user visits non-index protected page. Protected page is stored in session, user is redirected to login, after successful login user is redirected to original page requested. Left off on page #161 - Friendly register forwarding

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -34,7 +34,10 @@
 <% if ENV["RAILS_ENV"] == 'development' %>
 	<div id="debug">
 		<a href="#" onclick="Element.toggle('params_debug_info'); return false;">params</a> |
-		<a href="#" onclick="Element.toggle('session_debug_info'); return false;">session</a>
+		<a href="#" onclick="Element.toggle('session_debug_info'); return false;">session</a> | 
+		<a href="#" onclick="Element.toggle('env_debug_info'); return false;">env</a> |
+		<a href="#" onclick="Element.toggle('request_debug_info'); return false;">request</a>
+		<p></p>
 		<fieldset id="params_debug_info" class="debug_info" style="display: none;">
 			<legend>params</legend>
 			<%= debug(params) %>
@@ -42,6 +45,14 @@
 		<fieldset id="session_debug_info" class="debug_info" style="display: none;">
 			<legend>session</legend>
 			<%= debug(session) %>
+		</fieldset>
+		<fieldset id="env_debug_info" class="debug_info" style="display: none;">
+			<legend>session</legend>
+			<%= debug(request.env) %>
+		</fieldset>
+		<fieldset id="request_debug_info" class="debug_info" style="display: none; border-top: none;">
+			<legend>request</legend>
+			<%= debug(request) %>
 		</fieldset>
 	</div>
 <% end %>
