--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -11,7 +11,7 @@
 	<div id="header">RailsSpace</div>
 	<div id="nav">
 		<span style="float: right;">
-			<% if session[:user_id] -%>
+			<% if logged_in? -%>
 				<%= nav_link 'Hub', 'user', 'index' %> |
 				<%= nav_link 'Logout', 'user', 'logout' %>
 			<% else -%>
